fix text block left margin on mobile

--- a/agir/front/components/theme/_styles.scss
+++ b/agir/front/components/theme/_styles.scss
@@ -66,7 +66,9 @@ hr {
 }
 
 .text-block {
-  padding-left: 0;
+  @media only screen and (min-width: $collapse){
+    padding-left: 0;
+  }
 }
 
 // Theme
